deleted img and corrected align itmes

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ li{
     letter-spacing: 1px;
 }
 
-.truck, .sopa, .arroz, .alcapurrias {
+.truck, .sopa, .arroz {
     max-width: 100%;
     margin: 0;
 }
@@ -61,9 +61,7 @@ li{
     width: 100%;
 }
 
-.alcapurrias{
-    float: right;
-}
+
 
 .arroz {
     float: right;
@@ -113,10 +111,6 @@ video{
     li{
         font-size: 17px;
     }
-
-    .alcapurrias{
-        float: left;
-    }
     
     .sopa{
         float: right;
@@ -164,10 +158,6 @@ video{
         margin: 0;
     }
     
-    .alcapurrias{
-        float: right;
-        width: 190px
-    }
     
     .arroz {
         float: right;
@@ -175,7 +165,7 @@ video{
     }
     
     .sopa{
-        float: left;
+        float: right;
         width: 190px;
     }
 
@@ -208,13 +198,8 @@ video{
         font-size: 13px;
     }
 
-    .alcapurrias{
-        float: right;
-        width: 160px
-    }
-    
     .sopa{
-        float: left;
+        float: right;
         width: 160px;
     }
 
